[Navi] warning in drm_vblank_put()
Brief summary of the problem:
I can almost reproduce this by starting my window manager, but every so often when testing a bug in my window manager I get this warning about blanks
Hardware description:
- CPU: Ryzen 3900X
- GPU: Navi 5700 XT
- System Memory: 32 GB
- Display(s): 2x 1440p@144, 1x 4k@60
- Type of Display Connection: All DP1.4
System infomration:
- Distro name and Version: Arch
- Kernel version: 5.8.0-rc7-1-drm-tip-git-gc15717ae18ec
- Custom kernel: drm-tip
- AMD package version: N/A
How to reproduce the issue:
This seems to be triggered when I start my window manager, sway. I was trying to trigger this bug by continually reloading sway.
I can trigger this around 70% of the time simply by starting sway.
Attached files:
Aug 01 15:53:12 mami kernel: ------------[ cut here ]------------
Aug 01 15:53:12 mami kernel: amdgpu 0000:0a:00.0: drm_WARN_ON(atomic_read(&vblank->refcount) == 0)
Aug 01 15:53:12 mami kernel: WARNING: CPU: 23 PID: 63895 at drivers/gpu/drm/drm_vblank.c:1194 drm_vblank_put+0xe4/0xf0 [drm]
Aug 01 15:53:12 mami kernel: Modules linked in: cfg80211 rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscach>
Aug 01 15:53:12 mami kernel: mbcache jbd2 dm_crypt encrypted_keys trusted tpm hid_logitech_hidpp hid_logitech_dj hid_generic >
Aug 01 15:53:12 mami kernel: CPU: 23 PID: 63895 Comm: sway Tainted: G W 5.8.0-rc7-1-drm-tip-git-gc15717ae18ec #1
Aug 01 15:53:12 mami kernel: Hardware name: System manufacturer System Product Name/Pro WS X570-ACE, BIOS 1201 11/18/2019
Aug 01 15:53:12 mami kernel: RIP: 0010:drm_vblank_put+0xe4/0xf0 [drm]
Aug 01 15:53:12 mami kernel: Code: 8b 7f 18 4c 8b 67 50 4d 85 e4 74 22 e8 25 c9 56 c4 48 c7 c1 a8 22 57 c0 4c 89 e2 48 c7 c7 e>
Aug 01 15:53:12 mami kernel: RSP: 0018:ffff9fd08861f8e0 EFLAGS: 00010282
Aug 01 15:53:12 mami kernel: RAX: 0000000000000000 RBX: ffff96064dc2cc00 RCX: 0000000000000000
Aug 01 15:53:12 mami kernel: RDX: 0000000000000001 RSI: ffffffff85f1f905 RDI: 0000000000000246
Aug 01 15:53:12 mami kernel: RBP: ffff9fd08861fc60 R08: 00000bab73a15d2f R09: 0000000000000045
Aug 01 15:53:12 mami kernel: R10: 000000000000f997 R11: 0000000000000001 R12: ffff9607199fd930
Aug 01 15:53:12 mami kernel: R13: 0000000000000002 R14: ffff9606fe7d4c00 R15: ffff9605e9841c00
Aug 01 15:53:12 mami kernel: FS: 00007ff721c22e80(0000) GS:ffff96071efc0000(0000) knlGS:0000000000000000
Aug 01 15:53:12 mami kernel: CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Aug 01 15:53:12 mami kernel: CR2: 0000564d07c8ccd8 CR3: 000000080ac06000 CR4: 0000000000340ee0
Aug 01 15:53:12 mami kernel: ? drm_atomic_set_property+0xae0/0xae0 [drm]
Aug 01 15:53:12 mami kernel: amdgpu_drm_ioctl+0x49/0x80 [amdgpu]
Aug 01 15:53:12 mami kernel: ksys_ioctl+0x82/0xc0
Aug 01 15:53:12 mami kernel: __x64_sys_ioctl+0x16/0x20
Aug 01 15:53:12 mami kernel: do_syscall_64+0x44/0x70
Aug 01 15:53:12 mami kernel: entry_SYSCALL_64_after_hwframe+0x44/0xa9
Aug 01 15:53:12 mami kernel: RIP: 0033:0x7ff7225d68eb
Aug 01 15:53:12 mami kernel: Code: 0f 1e fa 48 8b 05 a5 95 0c 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 75 95 0c 00 f7 d8 64 89 01 48
Aug 01 15:53:12 mami kernel: RSP: 002b:00007ffe1db3f968 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
Aug 01 15:53:12 mami kernel: RAX: ffffffffffffffda RBX: 00007ffe1db3f9b0 RCX: 00007ff7225d68eb
Aug 01 15:53:12 mami kernel: RDX: 00007ffe1db3f9b0 RSI: 00000000c03864bc RDI: 0000000000000009
Aug 01 15:53:12 mami kernel: RBP: 00000000c03864bc R08: 0000000000000003 R09: 0000000000000003
Aug 01 15:53:12 mami kernel: R10: 00007ff7226a09e0 R11: 0000000000000246 R12: 0000564d0782ad90
Aug 01 15:53:12 mami kernel: R13: 0000000000000009 R14: 0000564d06db5460 R15: 0000564d073007f0
Aug 01 15:53:12 mami kernel: ---[ end trace 225362dcf4dfe004 ]---
Aug 01 15:53:12 mami kernel: ------------[ cut here ]------------
Aug 01 15:53:12 mami kernel: amdgpu 0000:0a:00.0: drm_WARN_ON(atomic_read(&vblank->refcount) == 0)
Aug 01 15:53:12 mami kernel: WARNING: CPU: 23 PID: 63895 at drivers/gpu/drm/drm_vblank.c:1194 drm_vblank_put+0xe4/0xf0 [drm]
Aug 01 15:53:12 mami kernel: Modules linked in: cfg80211 rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache nct6775 hwmon_vid raid456 async_raid6_recov async_memcpy async_pq async_xor async_tx xor raid6_pq libcrc32c md_mod amdgpu sunrp>
Aug 01 15:53:12 mami kernel: mbcache jbd2 dm_crypt encrypted_keys trusted tpm hid_logitech_hidpp hid_logitech_dj hid_generic usbhid hid crct10dif_pclmul crc32_pclmul crc32c_intel ghash_clmulni_intel aesni_intel glue_helper crypto_simd cryptd ccp xhci_pci>
Aug 01 15:53:12 mami kernel: CPU: 23 PID: 63895 Comm: sway Tainted: G W 5.8.0-rc7-1-drm-tip-git-gc15717ae18ec #1
Aug 01 15:53:12 mami kernel: Hardware name: System manufacturer System Product Name/Pro WS X570-ACE, BIOS 1201 11/18/2019
Aug 01 15:53:12 mami kernel: RIP: 0010:drm_vblank_put+0xe4/0xf0 [drm]
Aug 01 15:53:12 mami kernel: Code: 8b 7f 18 4c 8b 67 50 4d 85 e4 74 22 e8 25 c9 56 c4 48 c7 c1 a8 22 57 c0 4c 89 e2 48 c7 c7 e5 d4 56 c0 48 89 c6 e8 a2 c9 f4 c3 <0f> 0b eb c3 4c 8b 27 eb d9 0f 1f 00 0f 1f 44 00 00 8b b7 90 00 00
Aug 01 15:53:12 mami kernel: RSP: 0018:ffff9fd08861f8e0 EFLAGS: 00010282
Aug 01 15:53:12 mami kernel: RAX: 0000000000000000 RBX: ffff96064dc2cc00 RCX: 0000000000000000
Aug 01 15:53:12 mami kernel: RDX: 0000000000000001 RSI: ffffffff85f1f905 RDI: 0000000000000246
Aug 01 15:53:12 mami kernel: RBP: ffff9fd08861fc60 R08: 00000bab73a15d2f R09: 0000000000000045
Aug 01 15:53:12 mami kernel: R10: 000000000000f997 R11: 0000000000000001 R12: ffff9607199fd930
Aug 01 15:53:12 mami kernel: R13: 0000000000000002 R14: ffff9606fe7d4c00 R15: ffff9605e9841c00
Aug 01 15:53:12 mami kernel: FS: 00007ff721c22e80(0000) GS:ffff96071efc0000(0000) knlGS:0000000000000000
Aug 01 15:53:12 mami kernel: CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Aug 01 15:53:12 mami kernel: CR2: 0000564d07c8ccd8 CR3: 000000080ac06000 CR4: 0000000000340ee0
Aug 01 15:53:12 mami kernel: Call Trace:
Aug 01 15:53:12 mami kernel: amdgpu_dm_atomic_commit_tail+0x15b8/0x23c0 [amdgpu]
Aug 01 15:53:12 mami kernel: ? _raw_spin_unlock_irqrestore+0x20/0x40
Aug 01 15:53:12 mami kernel: ? __mod_timer+0x1fa/0x400
Aug 01 15:53:12 mami kernel: ? preempt_count_add+0x68/0xa0
Aug 01 15:53:12 mami kernel: commit_tail+0x94/0x130 [drm_kms_helper]
Aug 01 15:53:12 mami kernel: drm_atomic_helper_commit+0x113/0x140 [drm_kms_helper]
Aug 01 15:53:12 mami kernel: drm_mode_atomic_ioctl+0x8f8/0x9e0 [drm]
Aug 01 15:53:12 mami kernel: ? drm_atomic_set_property+0xae0/0xae0 [drm]
Aug 01 15:53:12 mami kernel: drm_ioctl_kernel+0xb2/0x100 [drm]
Aug 01 15:53:12 mami kernel: drm_ioctl+0x215/0x390 [drm]
Aug 01 15:53:12 mami kernel: ? drm_atomic_set_property+0xae0/0xae0 [drm]
Aug 01 15:53:12 mami kernel: amdgpu_drm_ioctl+0x49/0x80 [amdgpu]
Aug 01 15:53:12 mami kernel: ksys_ioctl+0x82/0xc0
Aug 01 15:53:12 mami kernel: __x64_sys_ioctl+0x16/0x20
Aug 01 15:53:12 mami kernel: do_syscall_64+0x44/0x70
Aug 01 15:53:12 mami kernel: entry_SYSCALL_64_after_hwframe+0x44/0xa9
Aug 01 15:53:12 mami kernel: RIP: 0033:0x7ff7225d68eb
Aug 01 15:53:12 mami kernel: Code: 0f 1e fa 48 8b 05 a5 95 0c 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 75 95 0c 00 f7 d8 64 89 01 48
Aug 01 15:53:12 mami kernel: RSP: 002b:00007ffe1db3f968 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
Aug 01 15:53:12 mami kernel: RAX: ffffffffffffffda RBX: 00007ffe1db3f9b0 RCX: 00007ff7225d68eb
Aug 01 15:53:12 mami kernel: RDX: 00007ffe1db3f9b0 RSI: 00000000c03864bc RDI: 0000000000000009
Aug 01 15:53:12 mami kernel: RBP: 00000000c03864bc R08: 0000000000000003 R09: 0000000000000003
Aug 01 15:53:12 mami kernel: R10: 00007ff7226a09e0 R11: 0000000000000246 R12: 0000564d07c27280
Aug 01 15:53:12 mami kernel: R13: 0000000000000009 R14: 0000564d07c1daa0 R15: 0000564d07c4ae30
Aug 01 15:53:12 mami kernel: ---[ end trace 225362dcf4dfe005 ]---
Edited by LaserEyess